Agregue un doc de prueba para hacer el menú, después lo incorporé a index y galery, falta hacer merge con rama Master, TODO LISTO

--- a/css/ejemplomenu.css
+++ b/css/ejemplomenu.css
@@ -1,102 +1,201 @@
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+* { box-sizing: border-box; }
+
+html{
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100vh;
 }
 
-div a:nth-child(1){
-  grid-area: daniela;
-  position: absolute;
-  margin: 100px;
-  font-size: 40px;
+body{
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100vh;
+}
+
+header{
+  height: 100vh;
+  font-family: Raleway;
+  font-weight: 400px;
+  background-image: url(imagenes/headermin1200.jpg);
+  background-repeat:no-repeat;
+}
+
+nav{
+  padding: 8px;
+}
+
+.logo{
+  float:left;
+  padding: 8px;
+  margin-left: 16px;
+  margin-top: 5px;
+}
+
+.logo a{
+  color: #FFF;
+  font-weight: 700;
+  font-size: 30px;
   font-family: 'Dancing Script', cursive;
-} 
-div:nth-child(2){
-  grid-area: mau;
-  position: absolute;
-  margin: 165px 0px 0px 170px;
-  font-size: 20px;
-  font-family: 'Dancing Script', cursive;
-  color: white;
-} 
-
-div a:nth-child(3){
-  grid-area: home;
-  position: absolute;
-  margin: 100px 0px 0px 1000px;
-  /*top, right, bottom, and left*/
-  font-size: 15px;
-  font-family: 'Raleway';
-}
-div a:nth-child(4){
-  grid-area: galeria;
-  position: absolute;
-  margin: 150px 0px 0px 1000px;
-  /*top, right, bottom, and left*/
-  font-size: 15px;
-  font-family: 'Raleway';
-}
-div a:nth-child(5){
-  grid-area: other;
-}
-
-.header{
-    background-image: url(imagenes/headermin1200.jpg);
-    height: 533px;
-  }
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
+  letter-spacing: 0px;
   text-decoration: none;
-  font-size: 17px;
 }
 
+.hidden {display: none;}
 
-/*Color que se pone cuando pasas el mouse por el menú*/
-.topnav a:hover {
-  background-color: #fadde5;
-  color: black;
+nav ul {
+  float: right;
 }
 
-.active {
-  background-color: #4CAF50;
-  color: white;
+nav ul li {
+  display: inline-block;
+  float: left;
 }
 
-.topnav .icon {
-  display: none;
+nav ul li:not(:first-child) {
+  margin-left: 48px; 
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a.icon {
-    float: right;
-    display: block;
+nav ul li:last-child {
+  margin-right: 24px;
+}
+
+nav ul li a {
+  display: inline-block;
+  outline: none;
+  color: #FFF;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 14px;
+  letter-spacing: 1.2px;
+  font-weight: 600;
+}
+
+@media screen and (max-width: 864px) {
+  .logo {
+    padding: 0;
   }
 
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
+  .nav-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%
+    height:100%;
+    z-index: -1;
+    background-color: #FFF;
+    opacity: 0;
+    transition: all 0.2s ease;
+  }
+
+  .nav-wrapper ul {
     position: absolute;
-    right: 100px;
-    top: 100px;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
   }
 
-  div a:nth-child(1){
-    visibility: hidden;
+  .nav-wrapper ul li {
+    display: block;
+    float: none;
+    width: 100%;
+    text-align: right;
+    margin-bottom: 10px;
   }
-  div:nth-child(2){
-    visibility: hidden;
+
+  .nav-wrapper ul li:nth-child(1) a {
+    transition-delay: 0.2s;
   }
+
+  .nav-wrapper ul li:nth-child(2) a {
+    transition-delay: 0.3s;
+  }
+
+  .nav-wrapper ul li:not(:first-child) {
+    margin-left: 0;
+  }
+
+  .nav-wrapper ul li a {
+    padding: 10px 24px;
+    opacity: 0;
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 1.2px;
+    transform: translateX(-20px);
+    transition: all 0.2s ease;
+  }
+
+  .nav-btn{
+    position: fixed;
+    right: 10px;
+    top: 10px;
+    display: block;
+    width: 48px;
+    height: 48px;
+    cursor: pointer;
+    z-index: 9999;
+    border-radius: 50%;
+  }
+
+  .nav-btn i{
+    display: block;
+    width: 20px;
+    height: 2px;
+    background: #FFF;
+    border-radius: 2px;
+    margin-left: 14px;
+  }
+
+  .nav-btn i:nth-child(1){
+    margin-top: 16px;
+  }
+
+  .nav-btn i:nth-child(2){
+    margin-top: 4px;
+    opacity: 1;
+  }
+
+  .nav-btn i:nth-child(3){
+    margin-top: 4px;
+    opacity: 1;
+  }
+
+  #nav:checked + .nav-btn {
+    transform: rotate(45deg);
+  }
+
+  #nav:checked + .nav-btn i {
+    background:#FFF;
+    transition: transform 0.2s ease;
+  }
+
+  #nav:checked + .nav-btn i:nth-child(1) {
+    transform: translateY(6px) rotate(180deg);
+  }
+
+  #nav:checked + .nav-btn i:nth-child(2) {
+    opacity: 0;
+  }
+
+  #nav:checked + .nav-btn i:nth-child(3) {
+    transform: translateY(-6px) rotate(90deg);
+  }
+
+  #nav:checked ~ .nav-wrapper {
+    z-index: 9990;
+    opacity: 1;
+  }
+
+  #nav:checked ~ .nav-wrapper ul li a {
+    opacity: 1;
+    transform: translateX(150px);
+    transform: translateY(100px);
+  }
+
+  .hidden {
+    display: none;
+  }
+
 }
