--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,17 @@
+* { box-sizing: border-box; }
+
+html{
+	margin: 0px;
+	padding: 0px;
+	width: 100%;
+	height: 100vh;
+}
+
 body {
 	margin: 0px;
+	padding: 0px;
+	width: 100%;
+	height: 100vh;
 }
 
 main{ 
@@ -27,7 +39,10 @@ main > * {
 /*Nombrar Areas*/
 header{
 	grid-area: header;
-	background-color: gray;
+	height: 100vh;
+	font-family: Raleway;
+	font-weight: 400px;
+	background-repeat:no-repeat;
 }
 
 div:nth-child(2){
@@ -57,12 +72,221 @@ footer{
 	background-color: yellow;
 }
 
+nav{
+	padding: 8px;
+}
+
+.logo{
+	position: absolute;
+	top: 30px;
+	left: 70px;
+	float:left;
+	padding: 8px;
+	margin-left: 16px;
+	margin-top: 5px;
+}
+
+.logo a{
+	color: #FFF;
+	font-weight: 700;
+	font-size: 30px;
+	font-family: 'Dancing Script', cursive;
+	letter-spacing: 0px;
+	text-decoration: none;
+}
+
+.hidden {display: none;}
+
+nav ul {
+	position: absolute;
+	top: 37px;
+	right: 30px;
+	float: right;
+}
+
+nav ul li {
+  display: inline-block;
+  float: left;
+}
+
+nav ul li:not(:first-child) {
+  margin-left: 48px; 
+}
+
+nav ul li:last-child {
+  margin-right: 24px;
+}
+
+nav ul li a {
+  display: inline-block;
+  outline: none;
+  color: #FFF;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 14px;
+  letter-spacing: 1.2px;
+  font-weight: 600;
+}
+
+@media screen and (max-width: 864px) {
+	.logo {
+		padding: 0;
+		position: absolute;
+		top: 10px;
+		left: 10px;
+		float:left;
+		padding: 8px;
+		margin-left: 16px;
+	}
+
+	.logo a{
+		color: #FFF;
+		font-weight: 700;
+		font-size: 25px;
+		font-family: 'Dancing Script', cursive;
+		letter-spacing: 0px;
+		text-decoration: none;
+	}
+
+	.nav-wrapper {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%
+		height:100%;
+		z-index: -1;
+		background-color: #FFF;
+		opacity: 0;
+		transition: all 0.2s ease;
+	}
+
+	.nav-wrapper ul {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		width: 100%;
+	}
+
+	.nav-wrapper ul li {
+		display: block;
+		float: none;
+		width: 100%;
+		text-align: right;
+		margin-bottom: 10px;
+	}
+
+	.nav-wrapper ul li:nth-child(1) a {
+		transition-delay: 0.2s;
+	}
+
+	.nav-wrapper ul li:nth-child(2) a {
+		transition-delay: 0.3s;
+	}
+
+	.nav-wrapper ul li:not(:first-child) {
+		margin-left: 0;
+	}
+
+	.nav-wrapper ul li a {
+		padding: 5px 24px;
+		opacity: 0;
+		color: #FFF;
+		font-size: 14px;
+		font-weight: 600;
+		letter-spacing: 1.2px;
+		transform: translateX(-20px);
+		transition: all 0.2s ease;
+		margin-left: 50px;
+	}
+
+	.nav-btn{
+		position: fixed;
+		right: 10px;
+		top: 10px;
+		display: block;
+		width: 48px;
+		height: 48px;
+		cursor: pointer;
+		z-index: 9999;
+		border-radius: 50%;
+	}
+
+	.nav-btn i{
+		display: block;
+		width: 20px;
+		height: 2px;
+		background: #FFF;
+		border-radius: 2px;
+		margin-left: 14px;
+	}
+
+	.nav-btn i:nth-child(1){
+		margin-top: 16px;
+	}
+
+	.nav-btn i:nth-child(2){
+		margin-top: 4px;
+		opacity: 1;
+	}
+
+	.nav-btn i:nth-child(3){
+		margin-top: 4px;
+		opacity: 1;
+	}
+
+	#nav:checked + .nav-btn {
+		transform: rotate(45deg);
+	}
+
+	#nav:checked + .nav-btn i {
+		background:#FFF;
+		transition: transform 0.2s ease;
+	}
+
+	#nav:checked + .nav-btn i:nth-child(1) {
+		transform: translateY(6px) rotate(180deg);
+	}
+
+	#nav:checked + .nav-btn i:nth-child(2) {
+		opacity: 0;
+	}
+
+	#nav:checked + .nav-btn i:nth-child(3) {
+		transform: translateY(-6px) rotate(90deg);
+	}
+
+	#nav:checked ~ .nav-wrapper {
+		z-index: 9990;
+		opacity: 1;
+	}
+
+	#nav:checked ~ .nav-wrapper ul li a {
+		opacity: 1;
+		transform: translateX(150px);
+		transform: translateY(100px);
+	}
+
+	.hidden {
+		display: none;
+	}
+}
+
 /*Small phone from 100px to 273px*/
 @media only screen 
    and (min-width : 100px) {
    	main{
    		grid-template-rows: 100px auto 500px 1fr repeat(2, minmax(min-content, 300px)) 100px;
    	}
+
+	.logo a{
+		font-size: 15px;
+	}
+	.nav-wrapper ul {
+		transform: translateY(-100%);
+	}
+	.nav-wrapper ul li a {
+		font-size: 8px;
+	}
 
    .header{
 		background-image: url(imagenes/headermin200.jpg);
@@ -356,6 +580,14 @@ footer{
    		grid-template-rows: 200px auto 500px 1fr repeat(2, minmax(min-content, 300px)) 100px;
    	}
 
+	.logo a{
+		font-size: 25px;
+	}
+
+	.nav-wrapper ul li a {
+		font-size: 10px;
+	}
+
    .header{
 		background-image: url(imagenes/headermin390.jpg);
 		height: 200px;
@@ -626,7 +858,7 @@ footer{
    	}
 
    .header{
-		background-image: url(imagenes/headermin768.jpg);
+		background-image: url(imagenes/headermin840.jpg);
 		height: 457px;
 	}
 
